--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -1845,7 +1845,7 @@ menu,
     min-height: 16px;
     min-width: 16px;
     padding: 4px;
-    background-color: $dark_bg_color;
+    background-color: $bg_color;
     border-radius: 0;
 
     &.top {
