--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -141,6 +141,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     box-shadow: $shadow_normal, 0 1px transparentize($b, 0.9);
     border-color: transparent;
     border-bottom-color: transparent;
+    transition: box-shadow $shortest_duration $deceleration_curve;
   }
   @else if $s == normal-dark {
     box-shadow: $shadow_normal;
@@ -394,6 +395,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     color: $selected_fg_color;
     background-color: $selected_bg_color;
     border: 1px solid $selected_bg_color;
+    &:backdrop { color: $selected_fg_color; }
   }
   @else if $t==insensitive {
     $_bg: if($c!=$bg_color, mix($c, $base_color, 85%), $insensitive_bg_color);
