--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -2427,9 +2427,8 @@ treeview.view check,
 treeview.view radio {
   &:selected {
     &:focus, & {
-      color: $fg_color;
-
-      @if $variant == 'light' { border-color: $selected_borders_color; }
+      color: $selected_fg_color;
+      border-color: $selected_borders_color;
     }
 
     &:disabled {
