--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -1493,13 +1493,13 @@ headerbar button.titlebutton.close:backdrop:hover, .titlebar button.titlebutton.
 
 headerbar button.titlebutton.maximize, .titlebar button.titlebutton.maximize { color: transparent; background-color: transparent; background-position: center; background-repeat: no-repeat; border-width: 0; box-shadow: none; transition-duration: 100ms; }
 
-headerbar button.titlebutton.maximize:hover, .titlebar button.titlebutton.maximize:hover { background-color: #64615e; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.35), 0 2px 3px rgba(0, 0, 0, 0.25); }
+headerbar button.titlebutton.maximize:hover, .titlebar button.titlebutton.maximize:hover { background-color: #64615e; }
 
 headerbar button.titlebutton.maximize:hover:backdrop, .titlebar button.titlebutton.maximize:hover:backdrop { box-shadow: none; }
 
 headerbar button.titlebutton.minimize, .titlebar button.titlebutton.minimize { color: transparent; background-color: transparent; background-position: center; background-repeat: no-repeat; border-width: 0; box-shadow: none; transition-duration: 100ms; }
 
-headerbar button.titlebutton.minimize:hover, .titlebar button.titlebutton.minimize:hover { background-color: #64615e; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.35), 0 2px 3px rgba(0, 0, 0, 0.25); }
+headerbar button.titlebutton.minimize:hover, .titlebar button.titlebutton.minimize:hover { background-color: #64615e; }
 
 headerbar button.titlebutton.minimize:hover:backdrop, .titlebar button.titlebutton.minimize:hover:backdrop { box-shadow: none; }
 
